2023-06-06 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-cmdline-common.h,
	common/toolcommon/tool-cmdline-common.c: Remove legacy SDR options
	-f and -q.  Update users accordingly.

	* ipmi-config/ipmi-config.h: Remove legacy / unused macro.

	* ipmi-config: Remove legacy -f command line option.

2023-06-05 Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_units): Handle special case when sensor has units
	"RPM" and the units rate is "per minute".

2023-06-05 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/spec: Update enterprise numbers scripts

	* libfreeipmi/spec: Update enterprise numbers.  Hand remove few
	instances where vendor decided to put their URL in their company
	name.

2023-06-05 Albert Chu <chu11@llnl.gov>

	* ipmi-oem: Remove legacy Dell get-system-info "slot-number" key.
	Users should use "blade-slot-info".

	* bmc-watchdog: remove legacy --logfile option and config
	file support.

	* libfreeipmi: remove legacy Dell macro from reverse engineering attempt.

2023-06-02 Albert Chu <chu11@llnl.gov>

	* libfreeipmi: Fix typo.

2023-05-15 Albert Chu <chu11@llnl.gov>

	* libfreeipmi, libipmimonitoring: Fix various function and macro
	typos

2023-05-15 Albert Chu <chu11@llnl.gov>

	* doc, man: fix a number of typos

	* bmc-device, ipmi-fru, ipmi-oem: Fix several output typos

	* global: Fix various comment / doc typos.

	* contrib/pet/petalert.pl: Change output error message typo.

	* libfreeipmi/include/freeipmi/sel/ipmi-sel.h: Fix typo in
	function prototype parameter.

	* libfreeipmi/include/freeipmi/spec/ipmi-rmcpplus-status-spec.h:
	Fix typo in error message string.

	* libfreeipmi/sel/ipmi-sel-string-intel-windmill.c
	(sel_string_output_intel_windmill_event_data1_class_sensor_specific_discrete),
	libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c
	(ipmi_get_oem_sensor_type_message): Fix output typos.

2023-05-12 Albert Chu <chu11@llnl.gov>
